Fixed video overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,14 +86,14 @@ body {
 }
 
 .hero-full-screen video {
-    position: absolute;
     top: 0;
     left: 0;
     z-index: -100;
     object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
     overflow: hidden;
-    min-height: 100%;
-    min-width: 100%;
 }
 
 .hero-full-screen .middle-content-section {
